--- a/css/custom.css
+++ b/css/custom.css
@@ -21,7 +21,6 @@ footer {
 	background-color: black;
 	font-size: 20px;
 }
-
 .subpage {
 	position: relative;
 	padding-top: 50px;
@@ -29,8 +28,11 @@ footer {
 .table {
 	margin-bottom: 5px;
 }
+.table-hover {
+	cursor: pointer;
+}
 .btn {
-	margin: 0 5px 10px 5px;
+	margin: 2px 5px 10px 5px;
 }
 .a{
 	color: #000000;
